Prototype 1 - 04/04/2023 ??:??
First version, looked quite bad to be honest and had no function

Prototype 2 - 08/04/2023 ??:??
UI Overhaul, added accounts and microsoft login works

Alpha 1 - 08/04/2023 18:??
Minecraft now launches but microsoft login doesn't work for gameplay

Alpha 2 - 09/04/2023 00:45
Made a dropdown where you could select downloaded minecraft versions