@@ -2,3 +2,4 @@ customtkinter
 tkinter
 pyngrok
 requests
+portablemc
