@@ -9,3 +9,9 @@ Minecraft now launches but microsoft login doesn't work for gameplay
 
 Alpha 2 - 09/04/2023 00:45
 Made a dropdown where you could select downloaded minecraft versions
+
+Alpha 3 - 09/04/2023 07:?? - Artsign
+Added an automation to install the requirements, instead of manually having to do it!
+
+Alpha 4 - 07/05/2023 01:17
+Fixed issue of Minecraft not launching on anyone's computer except ItsIceCreeperPE's(Project Owner)
